# financialanalysis

./: README.md  pyproject.toml
data/7203.T/: balance_sheet.csv  cashflow.csv  financials.csv  info.csv
src/: main.py
src/scripts/: alldata2analysis.py  alldata2analysis_v2.py  alldata2analysisdata.py  alldata2visualization.py  analysisdata2graph.py  balancesheet2visualization.py  cashflow2visualization.py  financials2visualization.py  yahoo2finance.py
