[project]
name = "financialanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.7",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "yfinance>=0.2.65",
]
